# evolutionary_ethics

./: README.md  app.py  data.db  ga_runner.py  init_db.py  pyproject.toml  requirements.txt
notebooks/: genetic_algorithm.ipynb  genetic_algorithm.py
static/: style.css
symbolic_reasoning_sys/: README.txt  compile_krb.py  ethical_ai.pl~  ethics_engine_expanded_32.pl#  ethics_engine_expanded_32.pl~  ethics_engine_final.pl  ethics_engine_final.pl~  example.krb  wallet_rules.krb
symbolic_reasoning_sys/expanded versions/: README2.txt  ethics_engine_expanded_32.pl  ethics_engine_expanded_32.pl~  ethics_engine_expanded_64.pl  ethics_engine_expanded_64.pl~
symbolic_reasoning_sys/old versions/: ethical_ai.pl  ethical_ai_v2.pl  ethical_ai_v3.pl  ethics_engine_v1.pl  ethics_engine_v2.pl  ethics_engine_v3.pl  ethics_engine_v3.pl~  ethics_engine_v4.pl  ethics_engine_v4.pl~  ethics_engine_v5.pl~  ethics_engine_v6.pl  ethics_engine_v6.pl~  ethics_engine_v7.pl  ethics_engine_v7.pl~
symbolic_reasoning_sys/pyke_venv/: pyvenv.cfg
symbolic_reasoning_sys/pyke_venv/Scripts/: Activate.ps1  activate  activate.bat
templates/: base.html  index.html
utils/: pl_parser.py  plot.py
